--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="./styles/base.css">
-        \1        <link rel="stylesheet" href="./styles/custom-fields.css">
+        <link rel="stylesheet" href="./styles/dashboard.css">
 </head>
 <body>
     <!-- HEADER -->
