--- a/modules/settings.html
+++ b/modules/settings.html
@@ -11,22 +11,24 @@
 </head>
 <body>
 
-<header class="app-header">
-  <div class="app-header-inner">
-    <div class="logo-block" id="logoBlock" style="cursor:pointer;">
-      <div class="logo">SIMPLIFY CRM</div>
-      <div class="subtitle">USTAWIENIA CRM</div>
-    </div>
+    <!-- HEADER -->
+    <header class="app-header">
+        <div class="app-header-inner">
+            <div class="app-header-left">
+                <div class="app-logo">Simplify CRM</div>
+                <div class="app-logo-subtitle">Ustawienia CRM</div>
+            </div>
+            <div class="app-header-right">
+                <span class="user-email" id="userEmail">Ładowanie...</span>
+                <button id="profileBtn" class="icon-btn" title="Personalizacja konta">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="12" cy="7" r="4"></circle>
+                <button id="logoutBtn" class="logout-btn">Wyloguj</button>
+            </div>
+        </div>
+    </header>
 
-    <div class="header-right">
-      <span id="userEmail" class="user-email">...</span>
-      <button id="profileBtn" class="icon-btn" title="Personalizacja konta">
-        👤
-      </button>
-      <button id="logoutBtn" class="logout-btn">WYLOGUJ</button>
-    </div>
-  </div>
-</header>
 
 <main class="settings-container">
   <div class="settings-layout">
