--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -9,8 +9,7 @@
         <link rel="stylesheet" href="../styles/base.css">
         <link rel="stylesheet" href="../styles/relationships.css">
 
-
-    <link rel="stylesheet" href="../styles/custom-fields.css"></head>
+</head>
 <body>
     <!-- HEADER -->
     <header class="app-header">
